--- a/html1-7/演習問題.html
+++ b/html1-7/演習問題.html
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <h1 class="logo">サービス紹介</h1>
+      <h1 class="title">サービス紹介</h1>
     </header>
     <main>
       <section>
